# robot_arm_control_docker

./: .env.template  Dockerfile  Dockerfile.dev  LICENSE  README.md  requirements.txt
scripts/: docker_build_and_push.bash  docker_build_and_run.bash  docker_buildx.bash  pub_3_DOF.bash  pub_5_DOF.bash  ros_build_and_run.bash
src/pros_arm/: CMakeLists.txt  LICENSE  package.xml
src/pros_arm/launch/: launch_arm.xml
src/pros_arm/src/: MockArmNode.cpp  PROSArmNode.cpp  RandomTargetArmNode.cpp
src/pros_arm/urdf/: 6axis_robot.gv  6axis_robot.urdf  test_arm.urdf  test_arm.xacro
src/pros_arm_py/: package.xml  setup.cfg  setup.py
src/pros_arm_py/launch/: arm_reader_and_writer.launch.py
src/pros_arm_py/pros_arm_py/: arm_reader.py  arm_writer.py  env.py  keyboard.py  mock.py  random.py
