<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pros_arm</name>
  <version>0.0.0</version>
  <description>This is a pkg to mock a physical arm based on PROS libaray.</description>
  <maintainer email="kylingithubdev@gmail.com">PAIA-Kylin</maintainer>
  <license>Commericial License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rcutils</depend>
  <depend>lifecycle_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>system_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
